# ai-code-tracker

./: .cursorrules  README.md  git_contribution_analyzer.py  pyproject.toml  stats.yaml
src/ai_code_tracker/: chart_generator.py  contribution_tracker.py
tests/: test_contribution_tracker.py
tests/fixtures/: git_log_sample.txt
