[project]
name = "ai-code-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mrmattwright", email = "matt@sudden.co.nz" }
]
requires-python = ">=3.11.8"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
